<resources>
    <string name="app_name">全功能型食品安全检测仪</string>
    <string name="action_settings">Settings</string>
    <string name="detecting">检测中……</string>
    <string name="can_not_operate">不可以操作设备</string>
    <string name="remaining_time">剩余时间</string>
    <string name="detect_need_3_min">检测需要3分钟…</string>
    <string name="detectint_please_wait">检测中，请稍候</string>
    <string name="notice">提示:</string>
    <string name="usb_connected">USB已连接</string>
    <string name="usb_disconnected">USB已断开连接</string>
    <string name="media_mounted">存储设备已插入</string>
    <string name="media_unmounted">存储设备已移除</string>
    <string name="wrong_password">密码错误</string>
    <string name="laws_and_regulations">法律法规</string>
    <string name="specimen_detect">样品检测</string>
    <string name="specimen_msg">样品信息</string>
    <string name="proj_manage">项目管理</string>
    <string name="data_query">数据查询</string>
    <string name="system_setup">系统设置</string>
    <string name="input_server_url">请输入服务端URL</string>
    <string name="server_url">http://</string>
    <string name="url_wrong_format">URL格式错误</string>
    <string name="already_in_main">已在主页面</string>
    <string name="more_product">更多产品</string>
    <string name="serial_number_">序列号：</string>
    <string name="fill_in_url">如需上传检测数据请正确填写服务端URL</string>
    <string name="change_sys_language_will_lead_to_reboot">改变系统语言将导致程序重新启动</string>
    <string name="need_link_wifi">如需上传数据和更新程序，您首先需要连接wifi</string>
    <string name="calibrate_need_equipment">校准需要相应的校准设备并且由专业的人员操作</string>
    <string name="click_version_update_to_check_new_version">点击“版本升级”以检测是否有新版本</string>
    <string name="can_set_org_and_operator">此处可设置检测单位和检测人员</string>
    <string name="specimen_input_notice">样品类型可以在下拉框选择也可以直接输入</string>
    <string name="time_interval_shouldnt_be_long">查询的间隔时间不宜过长以免影响查询耗时</string>
    <string name="eth_config_title">设置本地连接</string>
    <string name="eth_advanced_title">高级网络设置</string>
    <string name="eth_setting">网络设置</string>
    <string name="eth_dev_list">选择网卡:</string>
    <string name="eth_con_type">连接类型</string>
    <string name="eth_con_type_dhcp">自动获取IP地址</string>
    <string name="eth_con_type_manual">使用下面的IP地址</string>
    <string name="eth_dns">DNS 服务器</string>
    <string name="eth_gw">网关</string>
    <string name="eth_ipaddr">IP 地址</string>
    <string name="eth_quick_toggle_title">本地连接</string>
    <string name="eth_quick_toggle_summary">开启本地连接</string>
    <string name="eth_check_config">查看本地连接she </string>
    <string name="eth_do_config">配置本地连接</string>
    <string name="eth_conf_summary">配置本地连接</string>
    <string name="eth_mask">子网掩码</string>
    <string name="eth_toggle_summary_off">本地连接关闭</string>
    <string name="eth_toggle_summary_on">本地连接开启</string>
    <string name="menu_save">确定</string>
    <string name="menu_cancel">取消</string>
    <string name="proxy_setting">代理设置</string>
    <string name="eth_proxy">代理服务器</string>
    <string name="proxy_address">地址</string>
    <string name="proxy_port">端口号</string>
    <string name="proxy_exclusionlist">需要绕过代理的网站</string>
    <string name="eth_proxy_address">Proxy address</string>
    <string name="show_need_setting">这种模式下你需要设置静态的IP地址与DNS</string>
    <string name="advanced_need_setting">代理服务器地址和端口号不能为空</string>
    <string name="bypass_hint">输入过滤的地址以\",\"隔开</string>
    <string name="show_connect_ethernet">设置代理前需要先连接以太网.</string>
    <string name="sys_set">系统设置</string>
    <string name="normal_set">常规设置</string>
    <string name="a_normal_set">常规设置 </string>
    <string name="user_set">用户设置 </string>
    <string name="wifi_set">WIFI设置</string>
    <string name="a_wifi_set">WIFI设置</string>
    <string name="a_eth_set">>有线设置</string>
    <string name="wifi">WIFI</string>
    <string name="data_upload">数据上传</string>
    <string name="a_data_upload">数据上传</string>
    <string name="self_info">本机信息</string>
    <string name="a_self_info"> 本机信息</string>
    <string name="print_set">打印设置</string>
    <string name="voice_guide">语音提示</string>
    <string name="voice_guide_toggle">语音提示开关</string>
    <string name="auto_print_set">自动打印设置</string>
    <string name="print_msg_set">打印内容设置(批量打印时生效)</string>
    <string name="auto">自动</string>
    <string name="manual">手动</string>
    <string name="detail">详细</string>
    <string name="summary">概要</string>
    <string name="language_set">语言设置</string>
    <string name="system_language_set">系统语言英语及中文设置</string>
    <string name="timeset">时间设置</string>
    <string name="english">英文</string>
    <string name="chinese">中文</string>
    <string name="device_id">设备号：445asd52474a1e4wg4qakka</string>
    <string name="version">版本号：</string>
    <string name="input_psw">请输入密码</string>
    <string name="password_">密码:</string>
    <string name="cancel">取消</string>
    <string name="join">加入</string>
    <string name="title_activity_detect_pref">DetectPrefActivity</string>
    <string name="intput_number">请输入数字</string>
    <string name="reboot">程序将重新启动</string>
    <string name="reboot_silent"></string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="connect_internet_first">请先连接网络</string>
    <string name="COMMON_PROJ">常用项目</string>
    <string name="specimen_type">样品类型</string>
    <string name="detect_method">检测方法</string>
    <string name="detect_line_refer">检测线参考值</string>
    <string name="negative_refer">阴性参考值</string>
    <string name="refer_range">参考范围</string>
    <string name="add_or_delete">添加/删除</string>
    <string name="can_use">开通信息</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="upload">上传</string>
    <string name="original">查看原始数据</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="alert">警告</string>
    <string name="msg_delete">确定将删除此条数据?</string>
    <string name="ensure_delete_current_specimen">确定将删除当前样品?</string>
    <string name="title_activity_proj_edit">ProjEditActivity</string>
    <string name="refer_min">最小参考值</string>
    <string name="refer_max">最大参考值</string>
    <string name="refer_limit">参考限值</string>
    <string name="water">水</string>
    <string name="full_input_toast">请完整输入相关的设置参数</string>
    <string name="title_activity_proj">ProjActivity</string>
    <string name="help">帮助</string>
    <string name="setting">设置</string>
    <string name="operate">操作</string>
    <string name="operater">操作员</string>
    <string name="project_manage">项目管理</string>
    <string name="system_settings">系统设置</string>
    <string name="detect_time_out">检测时间超时</string>
    <string name="auto_get_ip">自动获取IP地址</string>
    <string name="use_follow_ip">使用下面的IP地址：</string>
    <string name="point">.</string>
    <string name="ethnet_set">以太网设置</string>
    <string name="ip_addr">IP地址：</string>
    <string name="subnet_mask">子网掩码：</string>
    <string name="default_gateway">默认网关：</string>
    <string name="first_choise_dns_server">首选DNS服务器</string>
    <string name="standby_choise_dns_server">备选DNS服务器</string>
    <string name="auto_get_dns_server_addr">自动获取DNS服务器地址</string>
    <string name="use_the_follow_dns_server_addr">使用下面的DNS服务器地址</string>
    <string name="check_update">检查更新</string>
    <string name="version_update">版本升级</string>
    <string name="ok">确  定</string>
    <string name="ensure">确定</string>
    <string name="update_succeed">更新成功</string>
    <string name="update_failed">更新失败</string>
    <string name="title_activity_detect">DetectActivity</string>
    <string name="reset">复位</string>
    <string name="print">打印</string>
    <string name="start_detect">开始检测</string>
    <string name="absorbancy">吸光度</string>
    <string name="inhibition_ratio">抑制率</string>
    <string name="result">结果</string>
    <string name="judgemnt_result">判定结果</string>
    <string name="channel">通道</string>
    <string name="channel_number">通道号</string>
    <string name="channel_number_">通道号：</string>
    <string name="positive">阳性</string>
    <string name="negative">阴性</string>
    <string name="select_all">全选当前页</string>
    <string name="select_all_page">全选所有页</string>
    <string name="contrast">对照</string>
    <string name="contrast_set">对照值设定</string>
    <string name="detect">检测</string>
    <string name="limit_range">限值范围</string>
    <string name="save">保存</string>
    <string name="detecting_and_dont_operate">检测中，请勿操作设备</string>
    <string name="serial_port_open_failed">串口打开失败</string>
    <string name="e3">E3,串口异常</string>
    <string name="e4">E4,串口正在使用中</string>
    <string name="warning">警告：</string>
    <string name="ensure_to_check_1_12"></string>
    <string name="detect_proj">检测项目</string>
    <string name="detect_type">检测类型</string>
    <string name="detect_time">检测时间</string>
    <string name="detect_result">检测结果</string>
    <string name="detect_proj_query">检测项目查询</string>
    <string name="detect_type_query">样品类型查询</string>
    <string name="to">至</string>
    <string name="select">选择</string>
    <string name="id_number">ID号</string>
    <string name="detect_number">检测编号</string>
    <string name="specimen_sn">样品编号</string>
    <string name="specimen_sn_">样品编号：</string>
    <string name="customer_org">送检单位</string>
    <string name="customer_org_">送检单位：</string>
    <string name="detect_org">检测单位</string>
    <string name="specimen_name">样品名称</string>
    <string name="specimen_name_">样品名称：</string>
    <string name="receive_time">送检时间</string>
    <string name="operator">检测人员</string>
    <string name="detect_limit">检测限值</string>
    <string name="original_values">查看原始数据</string>
    <string name="reference_limit">参考限值</string>
    <string name="proj">项目</string>
    <string name="update">上  传</string>
    <string name="query">查  询</string>
    <string name="input">导  入</string>
    <string name="output">导  出</string>
    <string name="total_pages">共   页</string>
    <string name="data_upload_succed">数据上传成功</string>
    <string name="data_upload_failed">数据上传失败</string>
    <string name="data_export_success">数据导出成功</string>
    <string name="data_export_faild">数据导出失败</string>
    <string name="please_connect_usb_storage_first">请先连接U盘</string>
    <string name="do_not_pull_out_usb_storage">请不要拔出U盘</string>
    <string name="delete_all_data">删除全部数据</string>
    <string name="Select_appropriate_action">选择相应的操作</string>
    <string name="not_allowed_to_edit">不允许编辑</string>
    <string name="no_right_to_modify_detect_result">您无权限修改检测结果</string>
    <string name="edit_the_record_that_id_is">编辑ID号为   的数据</string>
    <string name="delete_the_record_that_id_is">删除ID号   的数据</string>
    <string name="ensure_to_delete">删除操作将不可恢复！您确定要删除本条记录吗？</string>
    <string name="delete_record_failed">删除记录失败！请联系系统管理员！</string>
    <string name="no_data_to_upload">没有数据上传</string>
    <string name="no_data_to_output">没有数据需要导出</string>
    <string name="wifi_has_commected">wifi已连接</string>
    <string name="wifi_is_starting">wifi正在启用</string>
    <string name="wifi_is_powering_off">wifi正在关闭</string>
    <string name="wifi_password_wrong">wifi密码认证错误！</string>
    <string name="current_net">当前网络：</string>
    <string name="disconnect">断开</string>
    <string name="forget">忘记</string>
    <string name="wifi_is_connecting">wifi正在连接</string>
    <string name="wifi_connect_failed">wifi连接失败</string>
    <string name="password_can_not_be_null">密码不能为空</string>
    <string name="url_set_succeed">URL设置成功</string>
    <string name="find_new_version">发现新版本:</string>
    <string name="ensure_ungrade">\n是否升级？</string>
    <string name="current_version_is_latest">当前已是最新版本</string>
    <string name="upgrage_failed">升级失败,</string>
    <string name="app_existed">程序已存在</string>
    <string name="install_failed">安装失败</string>
    <string name="havent_enough_storage_install_failed">存储空间不足，安装失败</string>
    <string name="target_org">被检单位</string>
    <string name="map_show">地图显示</string>
    <string name="on">打开</string>
    <string name="off">关闭</string>
</resources>